added a container for the pad

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
 		<button class="clear button">Clear Pad</button>
 	</div>
 
+	<div id="pad-container">
+		<div></div>
+		<div></div>
+	<div></div>
+
+	</div>
+
 
 
 
