Fixed spacing issues

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 	<title>Hover Pad</title>
 </head>
 <body>
-
 	<div id="titlebar">
 		<h1 id="title">Hover Pad</h1>
 	</div>
@@ -15,16 +14,7 @@
 		<button class="pad-size button">Change Pad Size</button>
 		<button class="clear button">Clear Pad</button>
 	</div>
-
-	<div id="pad-container">
-		
-
-
-	</div>
-
-
-
-
+	<div id="pad-container"></div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script src="application.js"></script>
 </body>
